# aiida-common-workflows

./: .gitignore  .pre-commit-config.yaml  .prospector.yaml  .readthedocs.yml  .style.yapf  CHANGELOG.md  LICENCE  LICENSE.txt  MANIFEST.in  PEOPLE.md  README.md  abacus.py  afm_acwf_test.ipynb  installed.txt  pyproject.toml  requirements.txt  setup.json  setup.py
.github/workflows/: cd.yml  ci.yml  validate_release_tag.py
RelaxWorkChain/: README.md  submission_siesta.py
RelaxWorkChain/SiestaImplementation/: protocols.py  relaxinputs.py  workchain_relax_protocol.py
aiida_common_workflows/: __init__.py
aiida_common_workflows/cli/: __init__.py  launch.py  options.py  plot.py  root.py  utils.py
aiida_common_workflows/common/: __init__.py  init_magnetization.py  properties.py  structure.py  types.py
aiida_common_workflows/common/data/: README  h2.xyz  nh3_cone.xyz  nh3_flat.xyz
aiida_common_workflows/common/relax/: __init__.py  generator.py
aiida_common_workflows/common/visualization/: dissociation.py  eos.py
aiida_common_workflows/examples/: functions_overrides.py  overrides_example.py
aiida_common_workflows/generators/: __init__.py  generator.py  generator_no_prot.py  ports.py  spec.py
aiida_common_workflows/overrides/: generic.py
aiida_common_workflows/plugins/: __init__.py  entry_point.py
aiida_common_workflows/plugins/relax/quantum_espresso/: __init__.py  generator.py  workchain.py
aiida_common_workflows/protocol/: __init__.py  registry.py
aiida_common_workflows/utils/sphinx_extension/: input_generator.py
aiida_common_workflows/workflows/: _relax.py  common_force_set.py  dissociation.py  eos.py  relax_and_bands.py
aiida_common_workflows/workflows/bands/: __init__.py  generator.py  workchain.py
aiida_common_workflows/workflows/bands/castep/: generator.py  workchain.py
aiida_common_workflows/workflows/bands/fleur/: generator.py  workchain.py
aiida_common_workflows/workflows/bands/quantum_espresso/: __init__.py  generator.py  workchain.py
aiida_common_workflows/workflows/bands/siesta/: __init__.py  generator.py  workchain.py
aiida_common_workflows/workflows/phonons/: common_force_sets.py  frozen_phonons.py
aiida_common_workflows/workflows/relax/: README.md  __init__.py  generator.py  submission_template.py  workchain.py
aiida_common_workflows/workflows/relax/abinit/: __init__.py  common.py  eos_abinit.py  eos_abinit2.py  extractors.py  generator.py  protocol.yml  workchain.py
aiida_common_workflows/workflows/relax/bigdft/: __init__.py  generator.py  submission_template_bigdft.py  workchain.py
aiida_common_workflows/workflows/relax/castep/: __init__.py  additional_otfg_families.yml  extractors.py  generator.py  protocol.yml  soft_elements.yaml  workchain.py
aiida_common_workflows/workflows/relax/cp2k/: BASIS_MOLOPT_UCL  GTH_BASIS_SETS  GTH_POTENTIALS_PSI  __init__.py  atomic_kinds.yml  dzvp-pbe-gth-rev.yml  dzvp-pbe-gth.yml  generator.py  generator_sirius.py  protocol.yml  pseudopotentials.yml  tzv2p-pbe-gth.yml  workchain.py  workchain_sirius.py  xTB_parameters
aiida_common_workflows/workflows/relax/dftk/: DFTK_protocol.yaml  generator.py
aiida_common_workflows/workflows/relax/examples/: __init__.py  common.py  eos_silicon.py  eos_silicon_castep.py  eos_silicon_cp2k.py  eos_silicon_fleur.py  eos_silicon_quantum_espresso.py  eos_silicon_siesta.py  eos_silicon_vasp.py
aiida_common_workflows/workflows/relax/fleur/: __init__.py  extractors.py  generator.py  protocol.yml  submission_template.py  test_submit_relax.py  workchain.py
aiida_common_workflows/workflows/relax/gaussian/: __init__.py  generator.py  workchain.py
aiida_common_workflows/workflows/relax/gpaw/: __init__.py  generator.py  protocol.yml  workchain.py
aiida_common_workflows/workflows/relax/nwchem/: __init__.py  generator.py  protocol.yml  workchain.py
aiida_common_workflows/workflows/relax/orca/: __init__.py  generator.py  protocols.yaml  workchain.py
aiida_common_workflows/workflows/relax/quantum_espresso/: __init__.py  extractors.py  generator.py  (+2 more)
dev/: validate_optional_dependencies.py
docs/source/: conf.py  index.rst
docs/source/_static/: aiida-custom.css
examples/DFTK_MoS2/: DFTK_MoS2.py  MoS2.cif
examples/DFTK_Si/: DFTK_Si.py  Si_primitive.cif
examples/DFTK_eos_Si/: DFTK_eos_Si.py
examples/QE_Si/: QE_Si.py  Si.cif
examples/QE_eos_MoS2/: QE_eos_MoS2.py
src/aiida_common_workflows/: __init__.py
src/aiida_common_workflows/cli/: __init__.py  launch.py  options.py  plot.py  root.py  utils.py
src/aiida_common_workflows/common/: __init__.py  types.py
src/aiida_common_workflows/generators/: __init__.py  generator.py  optional_features.py  ports.py  spec.py
src/aiida_common_workflows/plugins/: __init__.py  entry_point.py  factories.py
src/aiida_common_workflows/protocol/: __init__.py  registry.py
src/aiida_common_workflows/workflows/: afm.py  dissociation.py  em.py  eos.py
tests/: conftest.py  pytest.ini  test_minimal_install.py
tests/cli/: test_launch.py  test_options.py  test_plot.py  test_root.py  test_utils.py
tests/cli/test_launch/: test_plot_eos_precision_precisions0_.yml  test_plot_eos_print_table_False_.yml
tests/cli/test_plot/: test_plot_dissociation_curve_precisions0_.yml  test_plot_eos_precision_precisions1_.yml  test_plot_eos_precision_precisions2_.yml  test_plot_eos_print_table_True_.yml
tests/common/relax/: test_generator.py
tests/generators/: test_generator.py
tests/overrides/: test_generic.py
tests/protocol/: test_registry.py
tests/workflows/bands/: test_implementations.py  test_siesta.py  test_workchain.py
tests/workflows/dissociation_curve/: test_workchain.py  test_workchain_diss_curve.py
tests/workflows/eos/: test_workchain.py  test_workchain_eos.py
tests/workflows/phonons/: test_frozen_phonons.py  test_workchain_force_sets.py
tests/workflows/relax/: test_abinit.py  test_bigdft.py  test_castep.py  test_cp2k.py  test_fleur.py  test_gaussian.py  test_generator.py  test_implementations.py  test_nwchem.py  test_orca.py  test_quantum_espresso.py  test_siesta.py  test_vasp.py  test_workchain.py
(+224 files in other folders)
